--- a/workplace/usermanager/src/main/resources/application.yaml
+++ b/workplace/usermanager/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 
+
 # 邮箱发送配置
 spring:
   datasource:
@@ -6,6 +7,11 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/XingYi-Tech?useUnicode=true&characterEncoding=utf-8
     username: root
     password: 19960320
+  jackson:
+    date-format: yyyy-MM-dd
+    joda-date-time-format: yyyy-MM-dd
+    # default-property-inclusion: NON_NULL
+    time-zone: GMT+8
 # application mappers
 mybatis:
   configuration:
